<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_extra_large" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
	    
        <TextView
	        android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"/>
        
	    <ImageView
	        android:layout_width="match_parent"
	    	android:layout_height="100dp"
	    	android:src="@drawable/title"
	    	android:contentDescription="@string/img_description"/>
	    
	    <TextView
	        android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="2"/>
	    <Button
	        android:id="@+id/btn_register"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginBottom="@dimen/margin_large"
	        android:background="@drawable/btn_outline_pink"
	        android:text="@string/register"
	        android:textColor="@color/main_pink_color"
	        android:textSize="26sp"/>
	    
	    <Button
	        android:id="@+id/btn_login"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginBottom="@dimen/margin_large"
	        android:background="@drawable/btn_outline_pink"
	        android:text="@string/login"
	        android:textColor="@color/main_pink_color"
	        android:textSize="26sp"/>
	    
	    <Button
	        android:id="@+id/btn_terms"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginBottom="@dimen/margin_large"
	        android:background="@android:color/transparent"
	        android:text="@string/terms"
	        android:textColor="@color/main_pink_color"
	        android:textSize="20sp"/>
	
	</LinearLayout>
</RelativeLayout>
