<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_small"
    android:orientation="horizontal"
    android:baselineAligned="false" >

    <LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
		    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/margin_small"
	    	android:orientation="horizontal" >
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/location"
		        android:textColor="@color/main_pink_color"
		        android:textSize="12sp"/>
		
		    <TextView
		        android:id="@+id/txt_location"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginLeft="@dimen/margin_small"
		        android:textColor="@color/text_gray"
		        android:textSize="12sp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/margin_small"
	    	android:orientation="horizontal" >
	
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/time"
		        android:textColor="@color/main_pink_color"
		        android:textSize="12sp"/>
		
		    <TextView
		        android:id="@+id/txt_order_time"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginLeft="@dimen/margin_small"
		        android:textColor="@color/text_gray"
		        android:textSize="12sp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/margin_small"
	    	android:orientation="horizontal" >
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/order_id"
		        android:textColor="@color/main_pink_color"
		        android:textSize="12sp"/>
		
		    <TextView
		        android:id="@+id/txt_order_id"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginLeft="@dimen/margin_small"
		        android:textColor="@color/text_gray"
		        android:textSize="12sp"/>
		    
	    </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_price"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="00"
	        android:textColor="@color/text_orange"
	        android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>